TBC - 0.33.0
- [NEW] - Added Rig Interface TCI
- Improved DXC Mode recognition
- Fixed Modal dialog blinks - Windows platform (issue #315)
- Fixed LoTW and eQSL download are only QSLs dowloads - button label changed (issue #318)
- Fixed i18n: Country Names (prop-modes) are translated (issue #322)

2024/02/10 - 0.32.0
- [NEW] - Added Rig Interface Omnirig v1 (Windows only)
- [NEW] - Added Rig Interface Omnirig v2 (Windows only)
- [NEW] - Clublog - Added Clear Clublog and reupload QSOs
- [NEW] - Clublog - Added Real-time Insert/Update/Delete
- [CHANGED] - Clublog - Upload callsign is derived from the Current Profile Callsign
- Fixed clang linker failed issue (issue #301)
- Fixed SAT Mode U/U missing (issue #308 PR #309 thanks ea5wa)
- Fixed Multiple QSO selection. Callsigns modified by mistake (issue #310)
- Fixed Callbook query cache is not properly cleared when Callbook settings change (issue #313)

2024/01/05 - 0.31.0
- [NEW] - DXC - Improved Mode recognition
- [NEW] - DXC - Switch Rig mode based on DXC Spot Mode (issue #217)
- [NEW] - DXC - Added Spot Country Column (issue #273)
- [NEW] - DXC - Added Menu for server management
- [NEW] - DXC - Added Auto-connect to server
- [NEW] - DXC - Added Keep QSOs Context Menu
- [NEW] - DXC - Added Clear QSO Context Menu
- [NEW] - DXC - Added support for SH/DX response parsing
- [NEW] - DXC - Added support for username, password for connection
- [CHANGED] - DXC - Commands Combo changed to function button with selectable function
- [CHANGED] - DXC - DX Spot is prepared via DXC Command Line, Remark dialog was removed
- [NEW] - Online Map - IBP station double-click tunes freq and switch Rig mode
- [NEW] - Main Window - Current profile name is shown (issue #282)
- [NEW] - Import - Details can be saved to file (issue #284)
- [NEW] - Added Simplified Chinese translation (PR #285 thank BG7JAF)
- [NEW] - New Contact - Enter saves QSO if QSO time is running (issue #293 - partial)