@@ -31,5 +31,6 @@
         <file>search-globe.svg</file>
         <file>search-globe_red.svg</file>
         <file>search-globe_green.svg</file>
+        <file>search-globe_orange.svg</file>
     </qresource>
 </RCC>
